Fix screen overflow

--- a/site/engine_public/css/admin.css
+++ b/site/engine_public/css/admin.css
@@ -83,7 +83,7 @@ textarea {
 textarea.editor {
     margin-top: 5px;
     margin-bottom: 5px;
-    width: 100%;
+    width: 98%;
 }
 
 textarea.admin-long {
